# LocalLLMChatbot

./: .gitignore  README.md  pyproject.toml
src/localllmchatbot/: Home.py  __init__.py  logger_setup.py
src/localllmchatbot/LocalModelChat/: LocalModelChat.py  utils.py
src/localllmchatbot/notebooks/: PJ_01_Ollama_Experiments.ipynb
