[project]
name = "localllmchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "palashj3", email = "palash.jain-cw@otsuka-us.com" }
]
requires-python = ">=3.10"
dependencies = [
    "chainlit>=1.3.2",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "ollama>=0.4.4",
    "pydantic==2.10.1",
    "ruff>=0.8.4",
    "streamlit>=1.41.1",
]

[project.scripts]
localllmchatbot = "localllmchatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
